Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-64981

failed to build qv4instr_moth.o on Linux openSUSE_42_3 (icc_18-x86_64)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • None
    • 5.11
    • None
    • Linux openSUSE_42_3 (icc_18-x86_64) - DeveloperBuild, NoPch, DisableTests, AbortTestingOnFirstFailure

    Description

      https://codereview.qt-project.org/#/c/213351/ Merge remote-tracking branch 'origin/5.10' into dev
      https://codereview.qt-project.org/#/c/213421/ Update submodules on 'dev' in qt5
      https://testresults.qt.io/coin/integration/qt/qt5/tasks/1512484128
      https://testresults.qt.io/coin/api/results/qt/qtdeclarative/024e6545c682796f64159112988dede312b68f00/LinuxopenSUSE_42_3x86_64LinuxopenSUSE_42_3x86_64ICC_18qtci-linux-openSUSE-42.3-x86_64-ac7ef9DeveloperBuild_NoPch_DisableTests/3cd1f25bfeaeae792d94ba95e39ff165af425b49/build_1512485792/log.txt.gz

      /home/qt/work/install/bin/moc -DQT_NO_URL_CAST_FROM_STRING -DQT_NO_INTEGER_EVENT_COORDINATES -DQT_NO_FOREACH -DQML_COMPILE_HASH=14599af2f27292710e68a6e500aa9f9cf3a30789 -DWTF_EXPORT_PRIVATE= -DJS_EXPORT_PRIVATE= -DENABLE_ASSEMBLER_WX_EXCLUSIVE=1 -DWTFReportAssertionFailure=qmlWTFReportAssertionFailure -DWTFReportAssertionFailureWithMessage=qmlWTFReportAssertionFailureWithMessage -DWTFReportBacktrace=qmlWTFReportBacktrace -DWTFInvokeCrashHook=qmlWTFInvokeCrashHook -DENABLE_LLINT=0 -DENABLE_DFG_JIT=0 -DENABLE_DFG_JIT_UTILITY_METHODS=1 -DENABLE_JIT_CONSTANT_BLINDING=0 -DBUILDING_QT__ -DWTF_USE_UDIS86=0 -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_QML_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NETWORK_LIB -DQT_CORE_LIB --include .moc/moc_predefs.h -I/home/qt/work/install/mkspecs/linux-icc-64 -I/home/qt/work/qt/qtdeclarative/src/qml -I/home/qt/work/qt/qtdeclarative/src/qml/memory -I/home/qt/work/qt/qtdeclarative/src/qml -I/home/qt/work/qt/qtdeclarative/src/qml/compiler -I/home/qt/work/qt/qtdeclarative/src/qml -I/home/qt/work/qt/qtdeclarative/src/qml/jsruntime -I/home/qt/work/qt/qtdeclarative/src/qml -I/home/qt/work/qt/qtdeclarative/src/qml/jit -I/home/qt/work/qt/qtdeclarative/src/qml -I/home/qt/work/qt/qtdeclarative/src/qml/debugger -I/home/qt/work/qt/qtdeclarative/src/qml/animations -I/home/qt/work/qt/qtdeclarative/src/3rdparty/masm/jit -I/home/qt/work/qt/qtdeclarative/src/3rdparty/masm/assembler -I/home/qt/work/qt/qtdeclarative/src/3rdparty/masm/runtime -I/home/qt/work/qt/qtdeclarative/src/3rdparty/masm/wtf -I/home/qt/work/qt/qtdeclarative/src/3rdparty/masm/stubs -I/home/qt/work/qt/qtdeclarative/src/3rdparty/masm/stubs/wtf -I/home/qt/work/qt/qtdeclarative/src/3rdparty/masm -I/home/qt/work/qt/qtdeclarative/src/3rdparty/masm/disassembler -I/home/qt/work/qt/qtdeclarative/src/3rdparty/masm/disassembler/udis86 -I/home/qt/work/qt/qtdeclarative/src/qml/.generated -I/home/qt/work/qt/qtdeclarative/include -I/home/qt/work/qt/qtdeclarative/include/QtQml -I/home/qt/work/qt/qtdeclarative/include/QtQml/5.11.0 -I/home/qt/work/qt/qtdeclarative/include/QtQml/5.11.0/QtQml -I/home/qt/work/install/include/QtCore/5.11.0 -I/home/qt/work/install/include/QtCore/5.11.0/QtCore -I/home/qt/work/install/include -I/home/qt/work/install/include/QtNetwork -I/home/qt/work/install/include/QtCore -I/opt/intel/compilers_and_libraries_2018.0.128/linux/compiler/include/intel64 -I/opt/intel/compilers_and_libraries_2018.0.128/linux/compiler/include/icc -I/opt/intel/compilers_and_libraries_2018.0.128/linux/compiler/include -I/usr/include/c++/4.8 -I/usr/include/c++/4.8/x86_64-suse-linux -I/usr/include/c++/4.8/backward -I/usr/local/include -I/usr/lib64/gcc/x86_64-suse-linux/4.8/include -I/usr/lib64/gcc/x86_64-suse-linux/4.8/include-fixed -I/usr/include -I/usr/include jsapi/qjsengine.h -o .moc/moc_qjsengine.cpp
      icpc -c -O0 -g -std=c++11 -fvisibility=hidden -fvisibility-inlines-hidden -w1 -Wall -Wcheck -wd1572,873,2259,2261,3373 -D_REENTRANT -D_REENTRANT -D_REENTRANT -fPIC -DQT_NO_URL_CAST_FROM_STRING -DQT_NO_INTEGER_EVENT_COORDINATES -DQT_NO_FOREACH -DQML_COMPILE_HASH=14599af2f27292710e68a6e500aa9f9cf3a30789 -DWTF_EXPORT_PRIVATE= -DJS_EXPORT_PRIVATE= -DENABLE_ASSEMBLER_WX_EXCLUSIVE=1 -DWTFReportAssertionFailure=qmlWTFReportAssertionFailure -DWTFReportAssertionFailureWithMessage=qmlWTFReportAssertionFailureWithMessage -DWTFReportBacktrace=qmlWTFReportBacktrace -DWTFInvokeCrashHook=qmlWTFInvokeCrashHook -DENABLE_LLINT=0 -DENABLE_DFG_JIT=0 -DENABLE_DFG_JIT_UTILITY_METHODS=1 -DENABLE_JIT_CONSTANT_BLINDING=0 -DBUILDING_QT__ -DWTF_USE_UDIS86=0 -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_QML_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NETWORK_LIB -DQT_CORE_LIB -I. -Imemory -I. -Icompiler -I. -Ijsruntime -I. -Ijit -I. -Idebugger -Ianimations -I../3rdparty/masm/jit -I../3rdparty/masm/assembler -I../3rdparty/masm/runtime -I../3rdparty/masm/wtf -I../3rdparty/masm/stubs -I../3rdparty/masm/stubs/wtf -I../3rdparty/masm -I../3rdparty/masm/disassembler -I../3rdparty/masm/disassembler/udis86 -I.generated -I../../include -I../../include/QtQml -I../../include/QtQml/5.11.0 -I../../include/QtQml/5.11.0/QtQml -I/home/qt/work/install/include/QtCore/5.11.0 -I/home/qt/work/install/include/QtCore/5.11.0/QtCore -I/home/qt/work/install/include -I/home/qt/work/install/include/QtNetwork -I/home/qt/work/install/include/QtCore -I.moc -I/home/qt/work/install/mkspecs/linux-icc-64 -o .obj/qjsvalue.o jsapi/qjsvalue.cpp
      Internal error: assertion failed at: "shared/cfe/edgcpfe/il.c", line 9371
      
      
      compilation aborted for compiler/qv4instr_moth.cpp (code 4)
      Makefile:15799: recipe for target '.obj/qv4instr_moth.o' failed
      make[2]: *** [.obj/qv4instr_moth.o] Error 4
      make[2]: *** Waiting for unfinished jobs....
      make[2]: Leaving directory '/home/qt/work/qt/qtdeclarative/src/qml'
      Makefile:52: recipe for target 'sub-qml-make_first-ordered' failed
      make[1]: *** [sub-qml-make_first-ordered] Error 2
      make[1]: Leaving directory '/home/qt/work/qt/qtdeclarative/src'
      Makefile:47: recipe for target 'sub-src-make_first' failed
      make: *** [sub-src-make_first] Error 2
      
      agent:2017/12/05 15:44:29 build.go:203: Process finished with error: exit status 2
      agent:2017/12/05 15:44:29 build.go:155: Error reading from stdout/err: exit status 2
      agent:2017/12/05 15:44:29 agent.go:78: ERROR building: exit status 2
      

      Attachments

        For Gerrit Dashboard: QTBUG-64981
        # Subject Branch Project Status CR V

        Activity

          People

            erikv Erik Verbruggen
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes