V4: Do not use computed goto's with icc

Otherwise we get:

Internal error: assertion failed at: "shared/cfe/edgcpfe/il.c", line 9371

Task-number: QTBUG-64981
Change-Id: I9a4bd81eb9d1ffee23c22f818583c06f9e74433b
Reviewed-by: Lars Knoll <lars.knoll@qt.io>